# tts_stt-learn

./: README.md  browser.py  date_time.py  hold.py  home_related_things.py  listen.py  main.py  new.py  password.py  pyproject.toml  read.md  speak.py  web_browser.py
web_browser/: __init__.py  chatgpt.py  google.py  monkey_type.py  youtube.py
